# SlightlyMoreAdvancedProject

./: CMakeLists.txt  CMakePresets.json  README.md  build-debug.sh  build-rel.sh  install.sh  vcpkg.json
include/Core/: Application.hpp  CommandLineArgs.hpp  Layer.hpp  LayerStack.hpp  Logging.hpp  SignalHandling.hpp
include/Graphics/: GLFW.hpp
include/UI/: Button.hpp  MainWindow.hpp  UIComponent.hpp  Window.hpp
include/Util/: UUID.hpp
src/Core/: Application.cpp  CommandLineArgs.cpp  EntryPoint.cpp  Layer.cpp  LayerStack.cpp  SignalHandling.cpp
src/Graphics/: GLFW.cpp
src/UI/: Button.cpp  MainWindow.cpp  UIComponent.cpp  Window.cpp
src/Util/: UUID.cpp
